--- a/templates/question_detail.html
+++ b/templates/question_detail.html
@@ -19,7 +19,7 @@
                 <div class="span9">
                     <div class="well well-white">
                         <h3 style="margin-top: -5px;">{{ question.title }}</h3>
-                        <p><a href="/author/{{ question.author.pk }}" class="btn profile"><i class="icon-user"></i></a> <b>{{ question.author.username }}</b> ({{ question.author.rating }}) <font class="muted">{{ question.rel_datetime }}</font></p>
+                        <p><a href="/author/{{ question.author.pk }}/" class="btn profile"><i class="icon-user"></i></a> <b>{{ question.author.username }}</b> ({{ question.author.rating }}) <font class="muted">{{ question.rel_datetime }}</font></p>
                         <p style="word-wrap:break-word;">{{ question.text }}</p>
                     </div>
                 </div>
@@ -49,7 +49,7 @@
                         </div>
                         <div class="span9">
                             <div class="well well-white">
-                               <p><a href="/author/{{ answer.author.pk }}" class="btn profile"><i class="icon-user"></i></a> <b>{{ answer.author.username }}</b> ({{ answer.author.rating }}) <font class="muted">{{ answer.rel_datetime }}</font></p> 
+                               <p><a href="/author/{{ answer.author.pk }}/" class="btn profile"><i class="icon-user"></i></a> <b>{{ answer.author.username }}</b> ({{ answer.author.rating }}) <font class="muted">{{ answer.rel_datetime }}</font></p> 
                                <p style="word-wrap:break-word;">{{ answer.text }}</p>
                             </div>
                         </div>
